# TimerClockNcurses

./: CMakeLists.txt  Clock.cpp  Clock.h  DatePrinter.h  DatePrinterN.cpp  DatePrinterN.h  DatePrinterT.cpp  DatePrinterT.h  GUIClock.h  TimePrinter.h  TimePrinter12.cpp  TimePrinter12.h  TimePrinter24.cpp  TimePrinter24.h  Timer.cpp  Timer.h  main.cpp
